crates/qubit-macros/tests/ui/handler-output-non-subscription-stream.rs
use qubit_macros::handler;

#[handler(query)]
async fn my_handler() -> impl Stream<Item = u32> {}

fn main() {}
